fix: KRAKEN-476 page wrapper overflow fix (#179)
* fix: KRAKEN-476 page wrapper overflow fix

* fix tests

* fix sonarcloud

---------

--- a/src/pages/APIServerList/index.module.scss
+++ b/src/pages/APIServerList/index.module.scss
@@ -15,7 +15,8 @@
   margin-top: 10px;
   box-sizing: border-box;
   border-radius: 4px;
-  min-height: calc(100vh - 132px);
+  max-height: calc(100vh - 152px);
+  overflow-y: scroll;
 
   :global {
     .expand-table {
