--- a/src/pages/EnvironmentActivityLog/index.module.scss
+++ b/src/pages/EnvironmentActivityLog/index.module.scss
@@ -100,7 +100,7 @@ cursor: pointer;
 }
 .contentWrapper{
   margin-top: 10px;
-  height: calc(100% - 70px);
+  height: 100%;
   border-radius: 4px;
   background: var(--Page-container-bg, #FFF);
   padding: 16px 20px;
